# OpusCodec-Android-16KB

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/auralis/opuscodec/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
opuscodec/: build.gradle.kts
opuscodec/src/androidTest/java/com/auralis/opuscodec/: ExampleInstrumentedTest.kt
opuscodec/src/main/java/com/auralis/opuscodec/src/main/cpp/: CMakeLists.txt
opuscodec/src/test/java/com/auralis/opuscodec/: ExampleUnitTest.kt
